style.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family: Verdana, sans-serif;
}

/*************************************************************************************/

header {
    background: #1d1d1d;
    text-align: center;
    color: #ffffff;
}

header img {
    display: block;
    margin: auto;
    clip-path: inset(0% 0% 0% 0% round 10px);
    overflow: hidden;
}

header h1 {
    margin: 0.5rem;
    text-align: center;
    font-size: 3rem;
    color: #08A937;
    text-shadow: 2px 2px #044F1A;
}

header h2 {
    margin: 0.5rem;
    text-align: center;
    color: #ffffff;
    text-shadow: 5px 5px 40px #ffffff;
}

/*************************************************************************************/

main {
    max-width: 1200px;
    margin: auto;
    padding-left: 1rem;
    padding-right: 1rem;
    text-align: justify;
    line-height: 1.5;
}

main button {
    background-color: #ff0000;
    color: white;
    cursor: pointer;
}

main a {
    text-decoration: none;
}

/*************************************************************************************/

#projects {
    max-width: 1200px;
    margin: auto;
}

.projects-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    /* gap: 2rem; */
  }

  @media (min-width: 700px) {
    .projects-grid {
      grid-template-columns: repeat(2, minmax(300px, 1fr));
    }
  }

  @media (max-width: 699px) {
    .projects-grid {
      grid-template-columns: 1fr;
    }
  }

#projects h2 {
    text-align: center;
    font-size: 2rem; 
    margin: 0;
}

#projects figure {
    background: #ffffff;
    border: 1px solid #ddd;
    padding: 1rem;
    border-radius: 8px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    text-align: center;
}

#projects figure img {
    max-width: 100%;
    height: auto;
    border-radius: 8px;
}

#projects figure figcaption {
    margin-top: 1rem;
}

#projects figure figcaption h3 {
    font-size: 1.5rem;
    margin: 0.5rem 0;
}

#projects figure figcaption p {
    font-size: 1rem;
    margin: 0.5rem 0 1rem;
    text-align: left;
}

#projects .tags {
    display: flex;
    flex-wrap: wrap;
    gap: 8px;
}

#projects .tags .tag-default {
    display: inline-block;
    padding: 5px 10px;
    /* border-radius: 4px; */
    font-size: 12px;
    color: white;
    background-color: #707070;
}

#projects .tags .tag-cpp {
    display: inline-block;
    padding: 5px 10px;
    /* border-radius: 4px; */
    font-size: 12px;
    color: white;
    background-color: #0080CD;
}

#projects .tags .tag-opengl {
    display: inline-block;
    padding: 5px 10px;
    /* border-radius: 4px; */
    font-size: 12px;
    color: white;
    background-color: #5586A5;
}

#projects .tags .tag-unity {
    display: inline-block;
    padding: 5px 10px;
    /* border-radius: 4px; */
    font-size: 12px;
    color: white;
    background-color: #30363F;
}

#projects .tags .tag-csharp {
    display: inline-block;
    padding: 5px 10px;
    /* border-radius: 4px; */
    font-size: 12px;
    color: white;
    background-color: #8468E2;
}

#projects .tags .tag-unreal {
    display: inline-block;
    padding: 5px 10px;
    /* border-radius: 4px; */
    font-size: 12px;
    color: white;
    background-color: #02080F;
}

#projects .tags .tag-java {
    display: inline-block;
    padding: 5px 10px;
    /* border-radius: 4px; */
    font-size: 12px;
    color: white;
    background-color: #F89917;
}

#projects .buttons {
    text-align: right;
}

#projects .github-button {
    display: inline-block;
    padding: 0.5rem 0.5rem;
    background-color: #792F9E;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    transition: background-color 0.3s;
}

#projects .github-button:hover {
    background-color: #4b1e61;
}

#projects .asset-store-button {
    display: inline-block;
    padding: 0.5rem 0.5rem;
    background-color: #30363F;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    transition: background-color 0.3s;
}

#projects .asset-store-button:hover {
    background-color: #1c1f24;
}

#projects .download-button {
    display: inline-block;
    padding: 0.5rem 0.5rem;
    background-color: #32CD33;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    transition: background-color 0.3s;
}

#projects .download-button:hover {
    background-color: #1f741f;
}

/*************************************************************************************/

footer {
    background-color: #1d1d1d;
    color: #fff;
    text-align: center;
    margin: auto;
    padding: 1rem;
    position: relative;
    bottom: 0;
    width: 100%;
}

/* .footer-container {
    max-width: 1200px;
    margin: auto;
} */

